$Id: ChangeLog,v 1.11 2004/12/18 05:03:57 mthuurne Exp $

2004-12-18 Maarten ter Huurne <maarten@treewalker.org>
    * Added support for Pasmo to make.bat/build.bat:
      "make pasmo" selects Pasmo instead of tniASM.
      Patch provided by BouKiChi.

2004-12-17 Maarten ter Huurne <maarten@treewalker.org>
    * Refactored subslot selection code from "cal_slt" into reusable
      subroutines.
    * Implemented subslot support for RDSLT and WRSLT.
    * Implemented CLRSPR (clear sprites) and also call it when switching
      screen mode.

2004-12-12 Maarten ter Huurne <maarten@treewalker.org>
    * Added "dist" target to Makefile.

2004-12-11 Maarten ter Huurne <maarten@treewalker.org>
    * Added support for Pasmo in the Makefile. You can select an assembler by
      setting "Z80_ASSEMBLER" to "pasmo" or "sjasm".
    * Added graphical logo to splash screen.
      Thanks to Patrick van Arkel (Vampier) for drawing the logo.

2004-12-10 Maarten ter Huurne <maarten@treewalker.org>
    * Made the MSX1 VRAM transfer routines faster.

2004-12-09 Maarten ter Huurne <maarten@treewalker.org>
    * Introduced debug.asm, which contains routines useful for debugging.
    * Added MSX2 routines for reading and writing VRAM.

2004-12-07 Maarten ter Huurne <maarten@treewalker.org>
    * Make CHGMOD routine available from subrom ($00D1).
    * Implemented CHKNEW routine.

2004-12-07 Albert Beevendorp
    * fixed order of memory mapper blocks.
    * Implemented subrom search routine.

2004-12-05 Maarten ter Huurne <maarten@treewalker.org>
    * Implemented searching for expanded slots.
      EXPTBL is now filled correctly.

2004-12-04 Maarten ter Huurne <maarten@treewalker.org>
    * Split off system variable and hook declarations into separate sources.
    * Implemented inter-slot call.
    * Split off hardware related declarations into separate source.
    * Split off video routines into separate source.
    * Started subrom implementation: