@@ -1,9 +1,10 @@
-$Id: ChangeLog,v 1.11 2004/12/18 05:03:57 mthuurne Exp $
+$Id: ChangeLog,v 1.12 2004/12/18 17:01:40 mthuurne Exp $
 
 2004-12-18 Maarten ter Huurne <maarten@treewalker.org>
     * Added support for Pasmo to make.bat/build.bat:
       "make pasmo" selects Pasmo instead of tniASM.
       Patch provided by BouKiChi.
+    * Keep Kana LED in off state.
 
 2004-12-17 Maarten ter Huurne <maarten@treewalker.org>
     * Refactored subslot selection code from "cal_slt" into reusable
